Explore fix voucher alignment

--- a/js/react/src/less/inventory.less
+++ b/js/react/src/less/inventory.less
@@ -607,6 +607,7 @@
 					.vouchers {
 						font-weight: normal;
 						margin-left: 40px;
+						text-align: left;
 					}
 				}
 				&.grid-result {
